feat: add attachment management
