# bend/src/main/java/com/kms/dto/AttachmentDTO.java
@@ -1,0 +1,11 @@
+package com.kms.dto;
+
+import lombok.Data;
+
+@Data
+public class AttachmentDTO {
+    private Long id;
+    private String fileName;
+    private String url;
+}
+
