# bend/src/main/java/com/kms/dto/KnowledgeUpdateReq.java
@@ -6,6 +6,8 @@ import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 import java.util.List;
 
+import com.kms.dto.AttachmentDTO;
+
 @Data
 public class KnowledgeUpdateReq {
     @NotBlank
@@ -24,6 +26,6 @@ public class KnowledgeUpdateReq {
     private Integer questionNo;
     @NotBlank
     private String content;
-    private List<String> attachments;
+    private List<AttachmentDTO> attachments;
     private String createdBy;
 }
